--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.6
   go_router: ^14.2.8
+  pin_code_text_field: ^1.8.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
